<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cin-maTix</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui \n film yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan \n update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan E-Wallet untuk \n transaksi tiket nonton</string>
    <string name="mulai">Mulai</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="history">History</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="items">Items</string>
    <string name="total_balance">Total Balance</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="success_desc">Tiket telah berhasil dibeli dan\n selamat menikmati film</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="btn_top_up">Top Up Saldo</string>
    <string name="top_up">Top Up</string>
    <string name="ten_k"><small>IDR\n</small> <b>19.000</b></string>
    <string name="twenty_k"><small>IDR\n</small> <b>49.000</b></string>
    <string name="fifty_k"><small>IDR\n</small> <b>99.000</b></string>
    <string name="one_hundred_k"><small>IDR\n</small> <b>199.000</b></string>
    <string name="two_n_fifty_k"><small>IDR\n</small> <b>299.000</b></string>
    <string name="five_hundred_k"><small>IDR\n</small> <b>499.000</b></string>
    <string name="lihat_wallet">Lihat Wallet</string>

</resources>