<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".wallet.TopUpActivity">



    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_rectangle_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/top_up"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/card_debit" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13"
        android:background="@null" >

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/saldo_tersedia"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="449dp" />

        <TextView
            android:id="@+id/tv_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="Rp0"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="411dp"
            tools:text="Rp0" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Choose an amount"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white_grey"
        android:ems="10"
        android:fontFamily="@font/montserrat_medium"
        android:hint="Or, type the amount"
        android:inputType="number|textPersonName"
        android:labelFor="@id/textView28"
        android:scaleType="center"
        android:textColor="@color/grey"
        android:textColorHint="@color/white_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:visibility="invisible"
        android:id="@+id/btn_top_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shape_rectangle_turquoise"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/btn_top_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_20k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rectangle_blue"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:text="@string/ten_k"
                android:textColor="@color/blue_grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_50k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_rectangle_blue"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:text="@string/twenty_k"
                android:textColor="@color/blue_grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_100k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rectangle_blue"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:text="@string/fifty_k"
                android:textColor="@color/blue_grey"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_200k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rectangle_blue"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:text="@string/one_hundred_k"
                android:textColor="@color/blue_grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_300k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_rectangle_blue"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:text="@string/two_n_fifty_k"
                android:textColor="@color/blue_grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_500k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rectangle_blue"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:text="@string/five_hundred_k"
                android:textColor="@color/blue_grey"
                android:textSize="18sp" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>